package Shared;

import java.io.Serializable;

public class SizeMessage implements Serializable {
    public int Size;
}

